--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -10,6 +10,63 @@ permalink: notepad
 
 # WORKING 13.11 - 24.11
 
+# SMALL TALKS
+
+## Pharses
+
+- The holidays are just around the corner
+- I am looking forward to seeing you on Thursday!
+
+## Jennifer
+
+- 
+
+## Karyn 
+
+- She lives in Atlanta (California).
+- The temperature is quite stable, and all summer was about 30-35 degrees.
+- Atlanta, 17 -> 2 degrees.
+
+## Weather
+
+### Saint-Petersburg
+
+- Temperature ranges from 30 to 34 degrees.
+- Vitamin D - luck of sunshine
+- Многих людей бесит такая погода!
+
+### Decease
+
+- I have a sore throat
+
+
+
+## Phrases and word
+
+1. How are you getting on? (Как поживаешь?)
+2. It's very convenient for me
+3. Have a great weekend!
+4. I am dying to find out!
+5. Очень много эээ, уммм, Нужно говорить `more fluency`
+   - You know..
+   - So..
+
+## Current Context - 13/11/2019 - Jennifer
+
+- What happened!
+- Pure accounting.
+- Icon - international exam! 26 thousand rubles.
+- Бугачевский accounting exam! 
+- ITEL - 14 thousand rubbles.
+- Tofel - 8-9 thousand rubbles.
+- What would you do if you passed the exam.
+- 
+- 
+
+
+
+
+
 ## Pronunciation
 
 - Clothes - [kləʊðz] -> **[клоз]**
@@ -37,15 +94,6 @@ permalink: notepad
 
   - How was your weekend?
 
-  
-
-## Phrases and word
-
-1. How are you getting on? (Как поживаешь?)
-2. It's very convenient for me
-3. Очень много эээ, уммм, Нужно говорить `more fluency`
-   - You know..
-   - So..
 
 
 
@@ -75,120 +123,7 @@ permalink: notepad
 
 
 
-# SMALL TALKS
 
-## Pharses
-
-- I am looking forward to seeing you on Thursday!
-- Have a great weekend!
-- The holidays are just around the corner
-- I am dying to find out!
-
-## Karyn 
-
-- She lives in Atlanta (California).
-- The temperature is quite stable, and all summer was about 30-35 degrees.
-- Atlanta, 17 -> 2 degrees.
-
-## Weather
-
-### Saint-Petersburg
-
-- Temperature ranges from 30 to 34 degrees.
-- Vitamin D - luck of sunshine
-- многих людей бесит такая погода!
-
-### Decease
-
-- I have a sore throat
-
-
-
-
-
-# ARTICALS
-
-## Present Perfect VS Past Simple
-
-**14.3 (p.40) - Put the verb into the correct form, present perfect or past simple.**
-
-1. ‘What's Madrid like?' ‘I don't know I haven’t been (I / not / be) there.'
-
-2. When **I got** (I / get) home last night, **I was** (I / be) very tired and **I went** (I / go) straight to bed.
-
-3. a: **Have you seen** (you / see) Lisa recently?
-
-   b: Yes, **I saw** (I / saw) her a few days ago.
-
-4. I'm tired. **I didn't sleep** (I / not / sleep) well last night.
-
-5. The bus drivers were on strike last week. **There were** (there / be) no buses.
-
-6. Mr Lee **worked** (work) in a bank for 15 years. Then **he gave** (he / give) it up. Now he works as a gardener.
-
-7. Mary lives in Dublin **she has lived** (she / live) there all her life.
-
-8. a: **Did you go** (you / go) to the cinema last night?
-   b: Yes, but **it was** (it / be) a mistake. The film **was** (be) awful.
-
-9. My grandfather **died** (die) before I was born. . ...
-   **I never met** (I / never / meet) him.
-
-10. I don't know Karen's husband. **I've never met** (I / never / meet) him.
-
-11. It's nearly lunchtime, and **I haven't seen** (I / not / see) Martin all morning.
-    I wonder where he is.
-
-12. ‘Where do you live?' 'In Boston.'
-    'How Long **have you lived** (you / live) there?' 'Five years.'
-
-13. ‘Where **did you live** (you / live) before that?' ‘In Chicago.'
-    ‘And how Long **have you lived** (you / Live) in Chicago?' ‘Two years.'
-
-
-
-## Percentage vs percent
-
-> The rule for using *percent* and *percentage* is straightforward. The word *percent* (or the symbol %) accompanies a **specific number,** whereas the more general word *percentage* is used **without a number.**
-
-**Pronunciation** 
-
-Percentage - [pəˈsentɪdʒ]
-
-Percent - [pəˈsent]
-
-**Percent**
-
-- Fifteen percent of the control group responded to treatment with Drug A.
-- More than 95% of the participants who responded to the survey reported positive results.
-
-**Percentage**
-
-- A large percentage of the population has been exposed to rotavirus.
-- The percentage of the population exposed to rotavirus is between 70% and 75%.
-
-**Useful phrases**
-
-- I'm a hundred percent sure.
-
-
-
-## Jogging vs Juggling vs Joggling
-
-- jog (jogging) - бегать трусцой
-- juggle (juggling) - жонглировать
-- Joggling - бег с жонглированием
-
-
-
-## Mr, Ms, Miss
-
-
-
-## Good practice
-
-- При пересказе не повторять слова
-- И использовать свои для передачи смысла, не нужно читать!
 
 
 
@@ -206,7 +141,7 @@ NOT CHECKED YET - Complete each question using a suitable verb.
 
    b : I was feeling very tired.
 
-3. a : Where **are you**?
+3. a : Where **are you** (going)?
 
    b : Just to the shop at the end of the street. I'll be back in a few minutes.
 
@@ -216,9 +151,9 @@ NOT CHECKED YET - Complete each question using a suitable verb.
 
 5. a : Your house is very beautiful. How long **have you lived** here?
 
-   b : Nearly ten years.
+   b : Nearly (Нели) ten years.
 
-6. a : How was your holiday? **Was it** a nice time?
+6. a : How was your holiday? ~~**Was it**~~ (Did you have) a nice time? (Странно звучит, 2а подряд)
 
    b : Yes, thanks. It was great.
 
