--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -8,6 +8,23 @@ permalink: notepad
 
 # NOTEPAD - COMMON
 
+# ARTICLES
+
+## Question with Who
+
+- Who will go with you?
+  - Who are you going with you?
+
+
+
+## Small talks - Weekend
+
+- How you enjoyed your weekend?
+
+
+
+
+
 # WORKING 13.11 - 24.11
 
 # SMALL TALKS
@@ -19,7 +36,7 @@ permalink: notepad
 
 ## Jennifer
 
-- 
+
 
 ## Karyn 
 
@@ -43,7 +60,7 @@ permalink: notepad
 
 ## Phrases and word
 
-1. How are you getting on? (Как поживаешь?)
+1. Hi, Karyn. How are you getting on? (Как поживаешь?)
 2. It's very convenient for me
 3. Have a great weekend!
 4. I am dying to find out!
@@ -51,45 +68,87 @@ permalink: notepad
    - You know..
    - So..
 
-## Current Context - 13/11/2019 - Jennifer
+# Current 19/11/2019
 
-- What happened!
-- Pure accounting.
-- Icon - international exam! 26 thousand rubles.
-- Бугачевский accounting exam! 
-- ITEL - 14 thousand rubbles.
-- Tofel - 8-9 thousand rubbles.
-- What would you do if you passed the exam.
-- 
-- 
+- Юля была в [https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0
+  - Mother in law + little дочь.
+  - 30-32, water - 25. High season in November.
+  - 6 hour by airplane
+- Много африканцев и арабов.
+- Who went with you on your trip to UAE? 
+- does he prohibite clean his room
 
+**Notes**
 
+````
+Who went with you on your trip to UAE? 
+Is it a popular destination? 
+High season 
+low seaon 
+Low season 
+How long does it take to get there? 
+Flying takes 6 hours 
+adhere by the dress code 
+Cover your neck 
+did not have to adhere to the dress code on the beach 
+In November 
+as I had hoped 
+````
+
+**Welcome**
+
+- Hi, Karyn. How are you getting on?
+  - And you?
+- Andrey, How was your romantic date with wine and candles on the beach Gulf of Finland?
+- Evgenia, How you enjoyed your weekend?
+
+**Cottage**
+
+Yes, was in cottage with golf field.
+
+Also we went to a spa
+
+We played in table games.
+
+We spent time with fun.
+
+**Running**
+
+I took part in a 21 day running challenge.
+
+- The main idea is that we should run 21 consecutive days.
+
+And I should run at that morning. 
+
+It wasn't so easy, you know..
+
+But when I came out and ran
+
+I was very cool running by golf field, because golf field has excellent grass to run.
 
 
 
 ## Pronunciation
 
+- Finance - [ˈfaɪnæns]
+  - Regarding (In reference to)  finance workshop, Hannah King will lead it at 6:30pm. (~~As regards~~)
+- Year - [jɪə(r)] -> [йиэа(р)]
+  - How many years did it take?
 - Clothes - [kləʊðz] -> **[клоз]**
-  
   - I went shopping for clothes *<u>([cloz] not [clovez])</u>* and got a jacket and some shorts.
-  
 - [Author](https://www.youtube.com/watch?v=l4885Cf4CLs) - [ˈɔːθə] -> **[oфэ]**
   
   - What does the author mean?
-  
 - Service - [ˈsɜː(r)vɪs] - **[сЁрвис]** not [cёрвайс]
 
   - What do you know about customer service?
-
 - Percentage - [pəˈsentɪdʒ], Percent - [pəˈsent]
   
   - I'm a hundred percent sure!
   - Не используется во множественной форме!
-  
 - Hear - [hɪə(r)] - **[хиə]**
 
   - I don't hear you well!
-
 - Weekend - [**wiːkˈend**]
 
   - How was your weekend?
@@ -106,6 +165,12 @@ permalink: notepad
 - What's on at the cinema at the moment (Что идет в кино сейчас)
 - I have a business (У меня есть дело)
 - Oh, save us! (О, спаси нас!)
+- I'll get back to you (Я свяжусь с вами)
+- no probs - без проблем
+- Taxi is over here.
+- How you enjoyed your weekend?
+- Sorry, it was nice talking to you but I have to go now. I have another appointment today. Bye.
+- Regarding (In reference to) finance workshop
 
 
 
@@ -123,11 +188,19 @@ permalink: notepad
 
 
 
-
-
-
-
 # JOURNAL
+
+## 13/11/2019 - Jennifer
+
+- What happened!
+- Pure accounting.
+- Icon - international exam! 26 thousand rubles.
+- Бугачевский accounting exam! 
+- ITEL - 14 thousand rubbles.
+- Tofel - 8-9 thousand rubbles.
+- What would you do if you passed the exam.
+
+
 
 ## 13/11/2019
 
