--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -25,6 +25,16 @@ permalink: notepad
 
 
 
+## How did you enjoy VS How was your
+
+> How did you enjoy your trip?
+
+People often ask "How did you enjoy ___?" to someone who they're not very close with. It's not a very personal-sounding question. If you know someone better, you ask "How was ___?":
+
+> How was your trip?
+
+
+
 # WORKING 13.11 - 24.11
 
 # SMALL TALKS
@@ -68,63 +78,43 @@ permalink: notepad
    - You know..
    - So..
 
-# Current 19/11/2019
-
-- Юля была в [https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0
-  - Mother in law + little дочь.
-  - 30-32, water - 25. High season in November.
-  - 6 hour by airplane
-- Много африканцев и арабов.
-- Who went with you on your trip to UAE? 
-- does he prohibite clean his room
-
-**Notes**
-
-````
-Who went with you on your trip to UAE? 
-Is it a popular destination? 
-High season 
-low seaon 
-Low season 
-How long does it take to get there? 
-Flying takes 6 hours 
-adhere by the dress code 
-Cover your neck 
-did not have to adhere to the dress code on the beach 
-In November 
-as I had hoped 
-````
+# Current 20/11/2019
 
 **Welcome**
 
-- Hi, Karyn. How are you getting on?
+- Hi, Jennifer. How are you getting on? How was your weekend?
   - And you?
-- Andrey, How was your romantic date with wine and candles on the beach Gulf of Finland?
-- Evgenia, How you enjoyed your weekend?
+
+**Bye**
+
+- See you. I am looking forward to seeing you on Thursday!
 
 **Cottage**
 
-Yes, was in cottage with golf field.
-
-Also we went to a spa
-
-We played in table games.
-
-We spent time with fun.
+- Yes, I was in a cottage with golf course.
+- Also we went to a spa
+- We played in table games.
+- We spent time with fun.
 
 **Running**
 
-I took part in a 21 day running challenge.
+- I took part in 21 day running challenge.
 
 - The main idea is that we should run 21 consecutive days.
 
-And I should run at that morning. 
+- And I should run at that morning. 
 
-It wasn't so easy, you know..
+- It wasn't so easy, you know..
 
-But when I came out and ran
+- But when I came out and ran
 
-I was very cool running by golf field, because golf field has excellent grass to run.
+- I was very cool running by golf course, because golf course has excellent grass to run.
+
+## Current
+
+
+
+
 
 
 
@@ -189,6 +179,35 @@ I was very cool running by golf field, because golf field has excellent grass to
 
 
 # JOURNAL
+
+## 19/11/2019 - Karyn
+
+- Юля была в [https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0
+  - Mother in law + little дочь.
+  - 30-32, water - 25. High season in November.
+  - 6 hour by airplane
+- Много африканцев и арабов.
+- Who went with you on your trip to UAE? 
+- does he prohibite clean his room
+
+**Notes**
+
+```
+Who went with you on your trip to UAE? 
+Is it a popular destination? 
+High season 
+low seaon 
+Low season 
+How long does it take to get there? 
+Flying takes 6 hours 
+adhere by the dress code 
+Cover your neck 
+did not have to adhere to the dress code on the beach 
+In November 
+as I had hoped 
+```
+
+
 
 ## 13/11/2019 - Jennifer
 
