--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -78,7 +78,7 @@ People often ask "How did you enjoy ___?" to someone who they're not very close 
    - You know..
    - So..
 
-# Current 20/11/2019
+# Current 
 
 **Welcome**
 
@@ -99,18 +99,58 @@ People often ask "How did you enjoy ___?" to someone who they're not very close 
 **Running**
 
 - I took part in 21 day running challenge.
-
 - The main idea is that we should run 21 consecutive days.
-
 - And I should run at that morning. 
-
 - It wasn't so easy, you know..
-
 - But when I came out and ran
-
 - I was very cool running by golf course, because golf course has excellent grass to run.
 
 ## Current
+
+**HW (21/11/2019) - Create two emails - Business Writing**
+
+
+
+
+
+- Austria -> Husband liked it.
+- Saint-Petersburg is located close to Finland.
+- Finland -> Finnish 
+  - All nature is clean.
+- Russian don't peak up their trash.
+- Crimiea
+- You would freeze
+- Courtesy - being polite - courteous - very polite, very respectfull
+- cipher
+- period and comma
+
+
+
+````
+salmon
+Smoked salmon
+sightseeing
+food
+Off the beaten track
+any trips in the near future?
+Other couples
+surfing
+The best surfing is in Hawaii
+close to Finland
+Better quality merchandise
+imported
+Finnish
+Don’t pick up their trash
+littering
+fine
+50.00
+
+
+````
+
+
+
+![1574351674631](C:\Users\Serzh\AppData\Roaming\Typora\typora-user-images\1574351674631.png)
 
 
 
@@ -179,6 +219,35 @@ People often ask "How did you enjoy ___?" to someone who they're not very close 
 
 
 # JOURNAL
+
+## 20/11/2019
+
+**Welcome**
+
+- Hi, Jennifer. How are you getting on? How was your weekend?
+  - And you?
+
+**Bye**
+
+- See you. I am looking forward to seeing you on Thursday!
+
+**Cottage**
+
+- Yes, I was in a cottage with golf course.
+- Also we went to a spa
+- We played in table games.
+- We spent time with fun.
+
+**Running**
+
+- I took part in 21 day running challenge.
+- The main idea is that we should run 21 consecutive days.
+- And I should run at that morning. 
+- It wasn't so easy, you know..
+- But when I came out and ran
+- I was very cool running by golf course, because golf course has excellent grass to run.
+
+
 
 ## 19/11/2019 - Karyn
 
