--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -22,14 +22,33 @@ permalink: notepad
 
 # SMALL TALKS
 
-## Pharses
+## Phrases - Illness
+
+1. Be healthy
+2. Take care of yourself
+3. I'm feeling sick
+4. How many sweaters are you wearing?
+
+## Phrases
 
 - The holidays are just around the corner
 - I am looking forward to seeing you on Thursday!
 
 ## Jennifer
 
+- Jennifer's birthday on 29/11/2019
+- Jennifer's mother and ex-boyfriend birthday on 22/11/2019
+- Her ex-boyfriend teaches in the university. He teaches Russian language. Also he helped her sister with admission in the university where he works.
+- Jennifer doesn't like cold Russian weather.
 
+**Phrases**
+
+1. You are not sorry! If you are sorry help me!
+
+**Mothers words**
+
+1. Do as much business as you can! One of them is going make your popular.
+2. Don't give up! Put your eggs in different baskets. One is going to crack.
 
 ## Karyn 
 
@@ -63,14 +82,24 @@ permalink: notepad
 
 # Current 
 
+??? Ability - issue for woman, dependents
 
 
 
+## Pronunciation - TODO
 
-
-
-## Pronunciation
-
+- New York - [njuː ˈjɔːk]
+  - She started a job in New York City.
+- Fall - fell - fallen
+  - He fell badly and broke his leg.
+- Wake - woke (waked) - woken (waked)
+  - I woke up with a headache.
+- Taxi - [ˈtæk.si]
+  - Shall we hail a taxi?
+- Through [θruː/] - фру
+  - They walked slowly through the woods.
+- TV - [tiːˈvi] - [тивИ]
+  - We could stay in and watch TV.
 - Finance - [ˈfaɪnæns]
   - Regarding (In reference to)  finance workshop, Hannah King will lead it at 6:30pm. (~~As regards~~)
 - Year - [jɪə(r)] -> [йиэа(р)]
@@ -112,20 +141,31 @@ permalink: notepad
 - How you enjoyed your weekend?
 - Sorry, it was nice talking to you but I have to go now. I have another appointment today. Bye.
 - Regarding (In reference to) finance workshop
+- I relate (I had experience)
 
 
 
 ## Phrases
 
 - 9 am - nine am sharp
+
 - My wife keeps grounded!
+
 - My internet is messing up today
+
 - How is it spelt (spelled)?
+
 - I would treat anything he says with extreme caution!
+
 - We had a big argument but now it is time to clear the air - 
+
 - Golf isn't his cup of tea - Гольф не его конек.
+
 - Put all your eggs in a basket
+
 - I shouldn't have done it. (Я не должен был этого делать!)
+
+  
 
 
 
