--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -34,22 +34,6 @@ permalink: notepad
 - The holidays are just around the corner
 - I am looking forward to seeing you on Thursday!
 
-## Jennifer
-
-- Jennifer's birthday on 29/11/2019
-- Jennifer's mother and ex-boyfriend birthday on 22/11/2019
-- Her ex-boyfriend teaches in the university. He teaches Russian language. Also he helped her sister with admission in the university where he works.
-- Jennifer doesn't like cold Russian weather.
-
-**Phrases**
-
-1. You are not sorry! If you are sorry help me!
-
-**Mothers words**
-
-1. Do as much business as you can! One of them is going make your popular.
-2. Don't give up! Put your eggs in different baskets. One is going to crack.
-
 ## Karyn 
 
 - She lives in Atlanta (California).
@@ -80,9 +64,44 @@ permalink: notepad
    - You know..
    - So..
 
+
+
+## Jennifer
+
+- Jennifer's birthday on 29/11/2019
+- Jennifer's mother and ex-boyfriend birthday on 22/11/2019
+- Her ex-boyfriend teaches in the university. He teaches Russian language. Also he helped her sister with admission in the university where he works.
+- Jennifer doesn't like cold Russian weather.
+
+**Phrases**
+
+1. You are not sorry! If you are sorry help me!
+
+**Mothers words**
+
+1. Do as much business as you can! One of them is going make your popular.
+2. Don't give up! Put your eggs in different baskets. One is going to crack.
+
 # Current 
 
-??? Ability - issue for woman, dependents
+- Hi, Jennifer. How are you getting on?
+- I remember that you have birthday on Friday. What are you going to do?
+
+
+
+**10 sentences - not checked**
+
+1. Yesterday I met the ambassador of the USA in a grocery store, it was fun.
+2. I'm feeling so bad, seems I get a pneumOnia. 
+3. This cream is the best! It nourishes your skin ~~well~~.
+4. But be careful a lot of cream might be harmful for soft skin.
+5. I relate to LGBT bad. It's so strange.
+6. Could you give me a yoga-mat? They're right behind you.
+7. My immune system is exhausted. I catch cold every spring and autumn.
+8. Could you dissolve this pill for me. I have a terrible headache.
+9. The ice is melted on the both poles of the earth due greenhouse effect.
+10. I blended an ice cream with some milk and got a cocktail.
+11. ??? Ability - issue for woman, dependents
 
 
 
