--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -13,8 +13,65 @@ permalink: notepad
 ## Small talks - Weekend
 
 - How you enjoyed your weekend?
+- How did you enjoy your weekend?
+- How was your weekend?
 
 
+
+## ??? Does he prohibited clean his room VS Is he prohibited clean his room
+
+
+
+## Traveling
+
+### General
+
+- Who went with you on your trip to UAE? 
+- Is it a popular destination? 
+- High season 
+- Low season
+- How long does it take to get there? 
+  - Flying takes 6 hours
+- As I had hoped 
+
+### Clothes
+
+- Should you adhere by the dress code?
+
+- Do you cover your neck?
+
+- Did not have to adhere to the dress code on the beach.
+
+  
+
+# Peoples
+
+## Jennifer
+
+- Jennifer's birthday on 29/11/2019
+- Jennifer's mother and ex-boyfriend birthday on 22/11/2019
+- Her ex-boyfriend teaches in the university. He teaches Russian language. Also he helped her sister with admission in the university where he works.
+- Jennifer doesn't like cold Russian weather.
+
+**Phrases**
+
+1. You are not sorry! If you are sorry help me!
+
+**Mothers words**
+
+1. Do as much business as you can! One of them is going make your popular.
+2. Don't give up! Put your eggs in different baskets. One is going to crack.
+
+## Karyn 
+
+- She lives in Atlanta (California).
+- The temperature is quite stable, and all summer was about 30-35 degrees.
+- Atlanta, 17 -> 2 degrees.
+
+## Юлия
+
+- Ездила в [Шарджа](https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0) в ноябре самый сезон. Temperature is 30-32, water - 25. High season in November. По погоде гуд, но дорого и скучно. 
+- Her husband likes Austria, but she hasn't been there yet.
 
 
 
@@ -33,12 +90,6 @@ permalink: notepad
 
 - The holidays are just around the corner
 - I am looking forward to seeing you on Thursday!
-
-## Karyn 
-
-- She lives in Atlanta (California).
-- The temperature is quite stable, and all summer was about 30-35 degrees.
-- Atlanta, 17 -> 2 degrees.
 
 ## Weather
 
@@ -64,44 +115,7 @@ permalink: notepad
    - You know..
    - So..
 
-
-
-## Jennifer
-
-- Jennifer's birthday on 29/11/2019
-- Jennifer's mother and ex-boyfriend birthday on 22/11/2019
-- Her ex-boyfriend teaches in the university. He teaches Russian language. Also he helped her sister with admission in the university where he works.
-- Jennifer doesn't like cold Russian weather.
-
-**Phrases**
-
-1. You are not sorry! If you are sorry help me!
-
-**Mothers words**
-
-1. Do as much business as you can! One of them is going make your popular.
-2. Don't give up! Put your eggs in different baskets. One is going to crack.
-
 # Current 
-
-- Hi, Jennifer. How are you getting on?
-- I remember that you have birthday on Friday. What are you going to do?
-
-
-
-**10 sentences - not checked**
-
-1. Yesterday I met the ambassador of the USA in a grocery store, it was fun.
-2. I'm feeling so bad, seems I get a pneumOnia. 
-3. This cream is the best! It nourishes your skin ~~well~~.
-4. But be careful a lot of cream might be harmful for soft skin.
-5. I relate to LGBT bad. It's so strange.
-6. Could you give me a yoga-mat? They're right behind you.
-7. My immune system is exhausted. I catch cold every spring and autumn.
-8. Could you dissolve this pill for me. I have a terrible headache.
-9. The ice is melted on the both poles of the earth due greenhouse effect.
-10. I blended an ice cream with some milk and got a cocktail.
-11. ??? Ability - issue for woman, dependents
 
 
 
@@ -186,135 +200,38 @@ permalink: notepad
 
   
 
-
-
 # JOURNAL
+
+## 25/11/2019 - Jennifer
+
+- Hi, Jennifer. How are you getting on?
+- I remember that you have birthday on Friday. What are you going to do?
+
+
+
+**10 sentences - not checked**
+
+1. Yesterday I met the ambassador of the USA in a grocery store, it was fun.
+2. I'm feeling so bad, seems I get a pneumOnia. 
+3. This cream is the best! It nourishes your skin ~~well~~.
+4. But be careful a lot of cream might be harmful for soft skin.
+5. I relate to LGBT bad. It's so strange.
+6. Could you give me a yoga-mat? They're right behind you.
+7. My immune system is exhausted. I catch cold every spring and autumn.
+8. Could you dissolve this pill for me. I have a terrible headache.
+9. The ice is melted on the both poles of the earth due greenhouse effect.
+10. I blended an ice cream with some milk and got a cocktail.
+11. ??? Ability - issue for woman, dependents
+
+
+
+
 
 ## 21/11/2019
 
-**Welcome**
+**HW** - Create two emails - Business Writing. 
 
-- Hi, Jennifer. How are you getting on? How was your weekend?
-  - And you?
-
-**Bye**
-
-- See you. I am looking forward to seeing you on Thursday!
-
-**Cottage**
-
-- Yes, I was in a cottage with golf course.
-- Also we went to a spa
-- We played in table games.
-- We spent time with fun.
-
-**Running**
-
-- I took part in 21 day running challenge.
-- The main idea is that we should run 21 consecutive days.
-- And I should run at that morning. 
-- It wasn't so easy, you know..
-- But when I came out and ran
-- I was very cool running by golf course, because golf course has excellent grass to run.
-
-## Current
-
-**HW (21/11/2019) - Create two emails - Business Writing**
-
-- Austria -> Husband liked it.
-- Saint-Petersburg is located close to Finland.
-- Finland -> Finnish 
-  - All nature is clean.
-- Russian don't peak up their trash.
-- Crimiea
-- You would freeze
-- Courtesy - being polite - courteous - very polite, very respectfull
-- cipher
-- period and comma
-
-
-
-```
-salmon
-Smoked salmon
-sightseeing
-food
-Off the beaten track
-any trips in the near future?
-Other couples
-surfing
-The best surfing is in Hawaii
-close to Finland
-Better quality merchandise
-imported
-Finnish
-Don’t pick up their trash
-littering
-fine
-50.00
-
-
-```
-
-![1574351674631](C:\Users\Serzh\AppData\Roaming\Typora\typora-user-images\1574351674631.png)
-
-
-
-## 20/11/2019
-
-**Welcome**
-
-- Hi, Jennifer. How are you getting on? How was your weekend?
-  - And you?
-
-**Bye**
-
-- See you. I am looking forward to seeing you on Thursday!
-
-**Cottage**
-
-- Yes, I was in a cottage with golf course.
-- Also we went to a spa
-- We played in table games.
-- We spent time with fun.
-
-**Running**
-
-- I took part in 21 day running challenge.
-- The main idea is that we should run 21 consecutive days.
-- And I should run at that morning. 
-- It wasn't so easy, you know..
-- But when I came out and ran
-- I was very cool running by golf course, because golf course has excellent grass to run.
-
-
-
-## 19/11/2019 - Karyn
-
-- Юля была в [https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0
-  - Mother in law + little дочь.
-  - 30-32, water - 25. High season in November.
-  - 6 hour by airplane
-- Много африканцев и арабов.
-- Who went with you on your trip to UAE? 
-- does he prohibite clean his room
-
-**Notes**
-
-```
-Who went with you on your trip to UAE? 
-Is it a popular destination? 
-High season 
-low seaon 
-Low season 
-How long does it take to get there? 
-Flying takes 6 hours 
-adhere by the dress code 
-Cover your neck 
-did not have to adhere to the dress code on the beach 
-In November 
-as I had hoped 
-```
+But Where are they?
 
 
 
@@ -402,10 +319,6 @@ Yes, I'm gonna go ~ going to go
 - I would appeciate for you quick responce 
 
 **h/w - Написать [email](https://docs.google.com/document/d/1YOyUn3i-4yZgHC-ky9WjeSpoTV-u3_n-Iot8DwAVENU/edit)**
-
-
-
-
 
 
 
