--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -22,6 +22,27 @@ permalink: notepad
 
 
 
+## Web-meeting
+
+### General
+
+- I'm back
+- He will be a bit later. He asked to start without him. He'll join (?to) us as soon as he can.
+
+### Browser navigation
+
+- Let's go back to the previous page
+
+
+
+## Decease
+
+- I have a sore throat
+- I have running nose (runny nose)
+- Pneumonia
+
+
+
 ## Traveling
 
 ### General
@@ -99,10 +120,6 @@ permalink: notepad
 - Vitamin D - luck of sunshine
 - Многих людей бесит такая погода!
 
-### Decease
-
-- I have a sore throat
-
 
 
 ## Phrases and word
@@ -117,10 +134,25 @@ permalink: notepad
 
 # Current 
 
+## If I do VS if i did
+
+1. If I passed this exam I would get the scholarship. But I didn't.
+2. If he woke up early he wouldn't be late on the train. But he overslept.
+3. If I won a lottery I would buy a new car.
+4. If I saw a mother I would be happy.
+5. If I passed all the exams perfectly I would get the scholarship. It's very hard, but I'll try.
+6. When I get a salary I will buy a down jacket. It's getting cold in Saint-Petersburg.
+7. If we buy this car, I will have to borrow 200 thousand rubles.
+8. If he takes together a photo together in Bali, It will be cool.
+9. if I spend this money I will be a bankrupt.
+10. If he invite me to the party I will join with pleasure.
+
 
 
 ## Pronunciation - TODO
 
+- Pneumonia - [nuh·**mow**·nyuh]
+  - ???
 - New York - [njuː ˈjɔːk]
   - She started a job in New York City.
 - Fall - fell - fallen
@@ -201,31 +233,6 @@ permalink: notepad
   
 
 # JOURNAL
-
-## 25/11/2019 - Jennifer
-
-- Hi, Jennifer. How are you getting on?
-- I remember that you have birthday on Friday. What are you going to do?
-
-
-
-**10 sentences - not checked**
-
-1. Yesterday I met the ambassador of the USA in a grocery store, it was fun.
-2. I'm feeling so bad, seems I get a pneumOnia. 
-3. This cream is the best! It nourishes your skin ~~well~~.
-4. But be careful a lot of cream might be harmful for soft skin.
-5. I relate to LGBT bad. It's so strange.
-6. Could you give me a yoga-mat? They're right behind you.
-7. My immune system is exhausted. I catch cold every spring and autumn.
-8. Could you dissolve this pill for me. I have a terrible headache.
-9. The ice is melted on the both poles of the earth due greenhouse effect.
-10. I blended an ice cream with some milk and got a cocktail.
-11. ??? Ability - issue for woman, dependents
-
-
-
-
 
 ## 21/11/2019
 
