--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -10,7 +10,16 @@ permalink: notepad
 
 # ARTICLES
 
-## Small talks - Weekend
+## Small talks
+
+### Greeting
+
+- Hello [name], How are you?
+- Hi, [name]. How are you getting on?
+
+
+
+##  - Weekend
 
 - How you enjoyed your weekend?
 - How did you enjoy your weekend?
@@ -19,6 +28,14 @@ permalink: notepad
 
 
 ## ??? Does he prohibited clean his room VS Is he prohibited clean his room
+
+
+
+## Does (~~Do~~) everybody
+
+- nobody
+- anybody
+- somebody
 
 
 
@@ -35,11 +52,21 @@ permalink: notepad
 
 
 
+## Problems
+
+- Oh, I hear you, something happened with my headphones, but now it works.
+- 
+
+
+
 ## Decease
 
 - I have a sore throat
 - I have running nose (runny nose)
 - Pneumonia
+- Hi guys! I caught a cold so can’t see u tomorrow((
+  - Get well(coffee)
+  - Many thanks) I do my best!
 
 
 
@@ -53,7 +80,8 @@ permalink: notepad
 - Low season
 - How long does it take to get there? 
   - Flying takes 6 hours
-- As I had hoped 
+- As I had hoped
+- How is (was) your trip?
 
 ### Clothes
 
@@ -93,6 +121,7 @@ permalink: notepad
 
 - Ездила в [Шарджа](https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0) в ноябре самый сезон. Temperature is 30-32, water - 25. High season in November. По погоде гуд, но дорого и скучно. 
 - Her husband likes Austria, but she hasn't been there yet.
+- Ездила в Финляндию на выходные в 22-23.11. Говорит скучно.
 
 
 
@@ -124,7 +153,6 @@ permalink: notepad
 
 ## Phrases and word
 
-1. Hi, Karyn. How are you getting on? (Как поживаешь?)
 2. It's very convenient for me
 3. Have a great weekend!
 4. I am dying to find out!
@@ -133,6 +161,14 @@ permalink: notepad
    - So..
 
 # Current 
+
+
+
+
+
+
+
+
 
 ## If I do VS if i did
 
@@ -151,6 +187,8 @@ permalink: notepad
 
 ## Pronunciation - TODO
 
+- procedure - [pruh·**see**·jr]
+  - the police are now reviewing procedures
 - Pneumonia - [nuh·**mow**·nyuh]
   - ???
 - New York - [njuː ˈjɔːk]
