--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -10,16 +10,38 @@ permalink: notepad
 
 # ARTICLES
 
-## Small talks
+# If I do VS if I did
 
-### Greeting
+## Usage
+
+- Regret
+- Assumption
+- Imagination
+- Suggestion
+- Wishes
+
+## Examples
+
+1. If I passed this exam I would get the scholarship. But I didn't.
+2. If he woke up early he wouldn't be late on the train. But he overslept.
+3. If I won a lottery I would buy a new car.
+4. If I saw my mother I would be happy.
+5. If I passed excellent all the exams I would get the scholarship. It's very hard, but I'll try.
+6. When I get a salary I will buy a down jacket. It's getting cold in Saint-Petersburg.
+7. If we buy this car, I will have to borrow 200 000 rubles.
+8. If we takes a picture together in Bali, It will be cool.
+9. If he invites me to the party I will join with pleasure.
+
+
+
+# Small talks
+
+## Greeting
 
 - Hello [name], How are you?
 - Hi, [name]. How are you getting on?
 
-
-
-##  - Weekend
+## Weekend
 
 - How you enjoyed your weekend?
 - How did you enjoy your weekend?
@@ -27,11 +49,13 @@ permalink: notepad
 
 
 
+# TODO
+
 ## ??? Does he prohibited clean his room VS Is he prohibited clean his room
 
 
 
-## Does (~~Do~~) everybody
+# Does (~~Do~~) everybody
 
 - nobody
 - anybody
@@ -39,27 +63,33 @@ permalink: notepad
 
 
 
-## Web-meeting
+# Web-meeting
 
-### General
+## General
 
 - I'm back
 - He will be a bit later. He asked to start without him. He'll join (?to) us as soon as he can.
 
-### Browser navigation
+## Browser navigation
 
 - Let's go back to the previous page
 
-
-
 ## Problems
 
-- Oh, I hear you, something happened with my headphones, but now it works.
-- 
+- Let me call back! (Need to restart the laptop)
+- I can't hear you.
+  - Oh, something happened with my headphones, but now it works.
+- I can't see you (Skype), (~~I don't see you~~), 
 
 
 
-## Decease
+# Common
+
+- She has gone (Oна ушла)
+
+  
+
+# Decease/Illness
 
 - I have a sore throat
 - I have running nose (runny nose)
@@ -67,12 +97,15 @@ permalink: notepad
 - Hi guys! I caught a cold so can’t see u tomorrow((
   - Get well(coffee)
   - Many thanks) I do my best!
+- Be healthy
+- Take care of yourself
+- I'm feeling sick
 
 
 
-## Traveling
+# Traveling
 
-### General
+## General
 
 - Who went with you on your trip to UAE? 
 - Is it a popular destination? 
@@ -83,15 +116,40 @@ permalink: notepad
 - As I had hoped
 - How is (was) your trip?
 
-### Clothes
+## Clothes
 
 - Should you adhere by the dress code?
-
 - Do you cover your neck?
-
 - Did not have to adhere to the dress code on the beach.
+- How many sweaters are you wearing?
 
-  
+
+
+# Russian English
+
+- Take a photo -> Take a picture
+  - If we take a picture together in Bali, It will be cool.
+
+
+
+# SMALL TALKS
+
+## General
+
+- The time flies so much
+
+## Phrases
+
+- The holidays are just around the corner
+- I am looking forward to seeing you on Thursday!
+
+## Weather
+
+- Temperature ranges from 30 to 34 degrees.
+- Vitamin D - luck of sunshine
+- Многих людей бесит такая погода!
+
+
 
 # Peoples
 
@@ -117,7 +175,7 @@ permalink: notepad
 - The temperature is quite stable, and all summer was about 30-35 degrees.
 - Atlanta, 17 -> 2 degrees.
 
-## Юлия
+## Yulia
 
 - Ездила в [Шарджа](https://tonkosti.ru/%D0%A8%D0%B0%D1%80%D0%B4%D0%B6%D0%B0) в ноябре самый сезон. Temperature is 30-32, water - 25. High season in November. По погоде гуд, но дорого и скучно. 
 - Her husband likes Austria, but she hasn't been there yet.
@@ -125,72 +183,40 @@ permalink: notepad
 
 
 
-# WORKING 13.11 - 24.11
-
-# SMALL TALKS
-
-## Phrases - Illness
-
-1. Be healthy
-2. Take care of yourself
-3. I'm feeling sick
-4. How many sweaters are you wearing?
-
-## Phrases
-
-- The holidays are just around the corner
-- I am looking forward to seeing you on Thursday!
-
-## Weather
-
-### Saint-Petersburg
-
-- Temperature ranges from 30 to 34 degrees.
-- Vitamin D - luck of sunshine
-- Многих людей бесит такая погода!
-
-
+# WORKING
 
 ## Phrases and word
 
-2. It's very convenient for me
-3. Have a great weekend!
-4. I am dying to find out!
-5. Очень много эээ, уммм, Нужно говорить `more fluency`
+2. He looks classy.
+3. It's very convenient for me
+4. Have a great weekend!
+5. I am dying to find out!
+6. Очень много эээ, уммм, Нужно говорить `more fluency`
    - You know..
    - So..
 
 # Current 
 
+Jennifer -> if I spend this money I will be broken. ?? is it correct?
 
 
 
 
 
 
-
-
-## If I do VS if i did
-
-1. If I passed this exam I would get the scholarship. But I didn't.
-2. If he woke up early he wouldn't be late on the train. But he overslept.
-3. If I won a lottery I would buy a new car.
-4. If I saw a mother I would be happy.
-5. If I passed all the exams perfectly I would get the scholarship. It's very hard, but I'll try.
-6. When I get a salary I will buy a down jacket. It's getting cold in Saint-Petersburg.
-7. If we buy this car, I will have to borrow 200 thousand rubles.
-8. If he takes together a photo together in Bali, It will be cool.
-9. if I spend this money I will be a bankrupt.
-10. If he invite me to the party I will join with pleasure.
 
 
 
 ## Pronunciation - TODO
 
-- procedure - [pruh·**see**·jr]
-  - the police are now reviewing procedures
+- Lamborghini - [Ламборгини] - если после "g" стоит "h", то оно читается как "Г".
+  - Lamborghini Urus is the world's first Super Sport Utility Vehicle
+- Jaguar - [**ja**·gwaar]
+  - Jaguar is the luxury vehicle brand of Jaguar Land Rover.
+- Procedure - [pruh·**see**·jr]
+  - The police are now reviewing procedures.
 - Pneumonia - [nuh·**mow**·nyuh]
-  - ???
+  - Pneumonia starts when a virus, fungus, or bacterium get into one of your lungs.
 - New York - [njuː ˈjɔːk]
   - She started a job in New York City.
 - Fall - fell - fallen
@@ -271,14 +297,6 @@ permalink: notepad
   
 
 # JOURNAL
-
-## 21/11/2019
-
-**HW** - Create two emails - Business Writing. 
-
-But Where are they?
-
-
 
 ## 13/11/2019 - Jennifer
 
