--- a/_drafts/00-working/0000-00-00-journal.md
+++ b/_drafts/00-working/0000-00-00-journal.md
@@ -55,11 +55,18 @@ permalink: notepad
 
 
 
+## Where did you have your hair cut? Which hairdresser did you go to?
+
+- ~~did you cut your hair~~ неправильно, так как он не сам стригся, а его стригил. И тут пасивный залог заменяется, конструкцией `did you have something`
+
+
+
 # Does (~~Do~~) everybody
 
 - nobody
 - anybody
 - somebody
+- There was a fight at the party, but **nobody was** hurt. 
 
 
 
@@ -199,11 +206,31 @@ permalink: notepad
 
 Jennifer -> if I spend this money I will be broken. ?? is it correct?
 
+## if and wish
 
+5.1. If I went to bed now, I **wouldn't** sleep.
 
+5.2 If I were rich, **I would travel** a lot.
 
+5.3 I wish I wouldn't have to work tomorrow, but unfortunately I do.
 
+5.4 The view was wonderful. If I **had** a camera with me, I would have taken some pictures.
 
+5.5 The weather is horrible. I wish it **would stop** raining.
+
+6.1 We **were woken up** by a loud noise during the night.
+
+6.2 A new supermarket is going to **be built** next year.
+
+6.3 There's somebody walking behind us. I think we **are being followed**.
+
+6.4 Where **were you born**?
+
+6.5 There was a fight at the party, but nobody **was hurt**. 
+
+6.6 Jane was supposed to phone me last night, but she didn't.
+
+6.7 Where **did you have your hair cut**? Which hairdresser did you go to?
 
 
 
@@ -271,6 +298,7 @@ Jennifer -> if I spend this money I will be broken. ?? is it correct?
 - Sorry, it was nice talking to you but I have to go now. I have another appointment today. Bye.
 - Regarding (In reference to) finance workshop
 - I relate (I had experience)
+- Jane was supposed to phone me last night, but she didn't. (Джен должна была позвонить мне..)
 
 
 
